<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
	tools:context=".FileDialog">

	<LinearLayout android:id="@+id/fdLinearLayoutList"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_alignParentBottom="true">

		<LinearLayout android:id="@+id/fdLinearLayoutSelect"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:paddingLeft="10dp"
			android:paddingRight="10dp" android:paddingBottom="5dp">

				<Button android:id="@+id/fdButtonNew" android:layout_height="wrap_content"
					android:layout_width="0dip" android:layout_weight=".3"
					android:text="@string/nnew"/>
				<Button android:id="@+id/fdButtonSelect" android:layout_height="wrap_content"
					android:layout_width="0dip" android:layout_weight=".7"
					android:text="@string/select"/>
		</LinearLayout>

		<LinearLayout android:id="@+id/fdLinearLayoutCreate"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:paddingLeft="10dp"
			android:paddingRight="10dp" android:paddingBottom="5dp">
			<TextView android:id="@+id/textViewFilename" android:text="@string/file_name"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			<EditText android:text="" android:id="@+id/fdEditTextFile"
			    android:hint="@string/filenamepath"
				android:layout_width="fill_parent" android:layout_height="wrap_content"/>

			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<Button android:id="@+id/fdButtonCancel" android:layout_height="wrap_content"
					android:layout_width="0dip" android:layout_weight=".3"
					android:text="@string/cancel"/>
				<Button android:id="@+id/fdButtonCreate" android:layout_height="wrap_content"
					android:layout_width="0dip" android:layout_weight=".7"
					android:text="@string/create"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_above="@+id/fdLinearLayoutList">
		<HorizontalScrollView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/scroll" android:background="@drawable/breadcrumb" android:scrollbars="none">
			<LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/path"/>
		</HorizontalScrollView>
		<ListView android:id="@android:id/list" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:fastScrollEnabled="true" />
		<TextView android:id="@android:id/empty"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:text="@string/no_data" />
	</LinearLayout>

</RelativeLayout>
